codepkg/objects/Shipment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Expiration__c</fullName>
        <description>To Store Batch Expiration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Quantity_Filled__c</fullName>
        <label>Dynamic Quantity Filled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Shipped__c</fullName>
        <description>To Store Quantity that has been Shipped</description>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Unit_Of_Measure__c</fullName>
        <description>To Store Quantity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Quantity Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SKU ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Store Shipment Order Line Number</description>
        <label>Shipment Order Line Item</label>
        <referenceTo>Shipment_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Shipment Line Items</relationshipLabel>
        <relationshipName>Shipment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Line Items</relationshipLabel>
        <relationshipName>Shipment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updated_Quantity_Requested__c</fullName>
        <label>Updated Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Batch_Number__c</fullName>
        <description>To Store Vendor Batch Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>